--- a/_posts/0000-01-02-rdixon000.md
+++ b/_posts/0000-01-02-rdixon000.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our rdixon000's slide!"
 ---
-This is rdixon000's slide
+This is my awesome slide
 Use the left arrow to go back!
